--- a/src/components/title/title320.css
+++ b/src/components/title/title320.css
@@ -35,11 +35,11 @@
 }
 
 .title_filter {
-  margin-left: 33px;
+  margin-left: 50px;
 }
 
 .line {
-  width: 240px;
+  width: 80%;
   height: 0.5px;
   border-radius: 1px;
   margin-left: 40px;
