--- a/src/components/footer/footer320.css
+++ b/src/components/footer/footer320.css
@@ -1,5 +1,78 @@
 .footer {
   width: 320px;
   height: 150px;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
+}
+
+.footer_row {
+  display: flex;
+  color: #0C0C0C;
+  font-size: 8px;
+  padding-left: 40px;
+  padding-top: 10px;
+}
+
+
+.footer_line {
+  bottom: 20px
+}
+
+
+.line {
+  width: 80%;
+  height: 0.5px;
+  border-radius: 1px;
+  margin-left: 40px;
+  background: #0C0C0C;
+}
+
+.footer_central {
+  display: flex;
+  padding: 20px;
+}
+
+.footer_left {
+  margin-right: 80px;
+}
+
+.footer_central_left {
+  width: 150px;
+  padding-right: 10px; 
+  margin-left: 20px;
+  font-size: 6px;
+}
+
+p {
+  color: #0C0C0C;
+}
+
+
+.central_left_mail {
+  text-decoration: underline;
+  margin: 10px 0 10px;
+}
+
+.footer_rigth_text {
+  font-size: 6px;
+  margin-bottom: 0px;
+}
+
+.central_left_text_last {
+  margin: 10px 0 10px;
+}
+
+.input {
+  width: 70px;
+  background-color: #e8e8e8;
+  border-radius: 5px;
+  padding: 2px;
+  font-size: 8px;
+}
+
+.footer_pointer {
+  color:#0C0C0C;
+}
+
+.checkbox {
+  
 }
