--- a/src/components/fourBlock/four320.css
+++ b/src/components/fourBlock/four320.css
@@ -20,16 +20,12 @@
   padding: 10px 20px 0 0;
 }
 
-
-p {
+.four_description_text {
   position: relative;
   color: #FFFFFF;
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
-}
-
-.text {
   text-align: left;
 }
 
