--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,6 @@
 /* @import url('./header992.css') (min-width: 992px); */
 /*  @import url('./header1200.css') (min-width: 1200px); */
 /* ! @import url('./header1440.css') (min-width: 1440px); */
-/* ! @import url('./header1920.css') (min-width: 1920px); */
+ @import url('./header1920.css') (min-width: 1920px);
 
 
