--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -4,4 +4,4 @@
 /* @import url('./title992.css') (min-width: 992px); */
 /*  @import url('./title1200.css') (min-width: 1200px); */
 /* ! @import url('./title1440.css') (min-width: 1440px); */
-/* ! @import url('./title1920.css') (min-width: 1920px); */
+@import url('./title1920.css') (min-width: 1920px);
