--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   text-align: center;
   background: var(--back);
+  background-image: url('./img/background.png');
 }
 
 .logo {
