--- a/src/components/sixBlock/sixBlock.css
+++ b/src/components/sixBlock/sixBlock.css
@@ -1,2 +1,3 @@
 @import url('./sixBlock320.css') (min-width: 320px);
+@import url('./sixBlock1440.css') (min-width: 1440px);
 @import url('./sixBlock1920.css') (min-width: 1920px);
