--- a/src/components/tenBlock/ten.css
+++ b/src/components/tenBlock/ten.css
@@ -1,2 +1,3 @@
 @import url('./ten320.css') (min-width: 320px);
+@import url('./ten1440.css') (min-width: 1440px);
 @import url('./ten1920.css') (min-width: 1920px);
