--- a/src/components/eightBlock/eight.css
+++ b/src/components/eightBlock/eight.css
@@ -1,2 +1,3 @@
 @import url('./eight320.css') (min-width: 320px);
+@import url('./eight1440.css') (min-width: 1440px);
 @import url('./eight1920.css') (min-width: 1920px);
