--- a/src/components/fourBlock/four.css
+++ b/src/components/fourBlock/four.css
@@ -1,2 +1,3 @@
 @import url('./four320.css') (min-width: 320px);
+@import url('./four1440.css') (min-width: 1440px);
 @import url('./four1920.css') (min-width: 1920px);
