--- a/src/components/footer/footer1440.css
+++ b/src/components/footer/footer1440.css
@@ -97,7 +97,7 @@ text-align: left;
   display: flex;
   width: 92%;
   padding: 0% 3% 0%;
-  margin-top: 8%;
+  margin-top: 1%;
 }
 
 .footer_pointer {
@@ -106,10 +106,11 @@ text-align: left;
 
 .checkbox {
   position: relative;
+  left: 1%;
   display: flex;
   width: 20px;
   height: 20px;
-  top: 15px;
+  top: 20px;
 }
 
 .row_checkbox {
@@ -117,7 +118,7 @@ text-align: left;
 }
 
 .checkbox_description {
-  top: 15px;
+  top: 20px;
   padding-top: 0px;
   margin-left: 20px;
   font-family: 'Neue Montreal';
