--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -2,6 +2,6 @@
 /* @import url('./title480.css') (min-width: 480px); */
 /* !  @import url('./title768.css') (min-width: 768px); */
 /* @import url('./title992.css') (min-width: 992px); */
-/*  @import url('./title1200.css') (min-width: 1200px); */
+ @import url('./title1200.css') (min-width: 1200px);
 @import url('./title1440.css') (min-width: 1440px);
 @import url('./title1920.css') (min-width: 1920px);
