--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,3 +1,4 @@
 @import url('./footer320.css') (min-width: 320px);
+@import url('./footer1200.css') (min-width: 1200px);
 @import url('./footer1440.css') (min-width: 1440px);
 @import url('./footer1920.css') (min-width: 1920px);
