--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 @import url('./header320.css') (min-width: 320px);
 /* @import url('./header480.css') (min-width: 480px); */
-/* !  @import url('./header768.css') (min-width: 768px); */
+@import url('./header768.css') (min-width: 768px);
 @import url('./header992.css') (min-width: 992px);
 @import url('./header1200.css') (min-width: 1200px);
 @import url('./header1440.css') (min-width: 1440px);
