--- a/src/components/header/header768.css
+++ b/src/components/header/header768.css
@@ -1,6 +1,6 @@
 .header {
-  width: 1920px;
-  padding: 3%;
+  width: 768px;
+  padding: 3% 7% 3%;
 }
 
 .header_row {
@@ -15,6 +15,6 @@ img {
 
 .header_logo {
   position: relative;
-  transform: scale(1);
-  left: 4%;
+  transform: scale(0.5);
+  /* left: 5%; */
 }
