--- a/src/components/title/title1920.css
+++ b/src/components/title/title1920.css
@@ -10,12 +10,14 @@
 }
 
 .title_text {
-font-family: 'Neue Montreal';
-font-size: 45px;
-font-weight: 500;
-line-height: 68px;
-letter-spacing: -0.011em;
-text-align: left;
+  position: relative;
+  padding-left: 0%;
+  font-family: 'Neue Montreal';
+  font-size: 45px;
+  font-weight: 500;
+  line-height: 68px;
+  letter-spacing: -0.011em;
+  text-align: left;
 }
 
 .button {
@@ -23,7 +25,7 @@ text-align: left;
   width: 119px;
   height: 32px;
   border-radius: 80px;
-  top: 20%; 
+  top: 20%;
 }
 
 .button span {
@@ -48,12 +50,12 @@ text-align: left;
   width: 80%;
   height: 0.5px;
   margin-left: 40px;
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 .title_line {
   width: 92%;
   top: 355.13px;
   left: 159px;
-  background: #FFFFFF;
+  background: #ffffff;
 }
