--- a/src/components/title/title1200.css
+++ b/src/components/title/title1200.css
@@ -5,12 +5,13 @@
 }
 
 .title_text {
-font-family: 'Neue Montreal';
-font-size: 35px;
-font-weight: 500;
-line-height: 68px;
-letter-spacing: -0.011em;
-text-align: left;
+  width: 73%;
+  font-family: 'Neue Montreal';
+  font-size: 35px;
+  font-weight: 500;
+  line-height: 68px;
+  letter-spacing: -0.011em;
+  text-align: left;
 }
 
 .button {
@@ -34,7 +35,7 @@ text-align: left;
 
 .title_filter {
   display: flex;
-  margin-left: 10%;
+  margin-left: 0%;
   column-gap: 3%;
 }
 
@@ -43,12 +44,12 @@ text-align: left;
   width: 80%;
   height: 0.5px;
   margin-left: 40px;
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 .title_line {
   width: 92%;
   top: 355.13px;
   left: 159px;
-  background: #FFFFFF;
+  background: #ffffff;
 }
