--- a/src/components/eightBlock/eight1920.css
+++ b/src/components/eightBlock/eight1920.css
@@ -5,8 +5,9 @@
 }
 
 .eight_row {
+  display: flex;
   padding: 5% 1% 5%;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .eight_title {
@@ -23,18 +24,16 @@
 
 .eight_description {
   font-family: 'Neue Montreal';
-    font-size: 25px;
-    font-weight: 400;
-    line-height: 31px;
-    letter-spacing: -0.011em;
-    text-align: left;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 31px;
+  letter-spacing: -0.011em;
+  text-align: left;
 }
 
 .eight_description_text {
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 5%;
   justify-content: space-between;
   text-align: left;
 }
-
-
