--- a/src/components/eightBlock/eight480.css
+++ b/src/components/eightBlock/eight480.css
@@ -1,19 +1,20 @@
 .eight {
   position: relative;
-  width: 768px;
+  width: 480px;
   padding: 0 5% 0;
 }
 
 .eight_row {
-  display: flex;
+  display: block;
   padding: 5% 1% 5%;
   color: #ffffff;
 }
 
 .eight_title {
-  width: 12.48%;
-  height: 5.36%;
-  margin-right: 35%;
+  width: auto;
+  height: auto;
+  padding: 2% 3% 1%;
+  margin-right: 0;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
@@ -23,6 +24,7 @@
 }
 
 .eight_description {
+  padding: 2% 3% 1%;
   font-family: 'Neue Montreal';
   font-size: 18px;
   font-weight: 400;
