--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,4 +1,5 @@
 @import url('./footer320.css') (min-width: 320px);
+@import url('./footer480.css') (min-width: 480px);
 @import url('./footer768.css') (min-width: 768px);
 @import url('./footer992.css') (min-width: 992px);
 @import url('./footer1200.css') (min-width: 1200px);
