--- a/src/components/footer/footer480.css
+++ b/src/components/footer/footer480.css
@@ -1,11 +1,11 @@
 .footer {
   position: relative;
-  padding: 0 5% 0;
+  padding: 0 3% 0;
 }
 
 .footer_row {
   display: flex;
-  padding: 1% 5% 0%;
+  padding: 5% 8% 0%;
 }
 
 .footer_title {
@@ -18,21 +18,21 @@
 }
 
 .line {
-  width: 92%;
+  width: 88%;
   height: 0.5px;
   border-radius: 1px;
   background: #0c0c0c;
 }
 
 .footer_central {
-  display: flex;
+  display: block;
   width: 92%;
   height: auto;
 }
 
 .footer_central_left {
   padding: 3% 0% 0%;
-  width: 500px;
+  width: auto;
   font-family: 'Neue Montreal';
   font-size: 25px;
   font-weight: 400;
@@ -44,8 +44,8 @@
 .footer_central_rigth {
   position: relative;
   padding: 3% 0% 0%;
+  margin: 0% 0% 0%;
   left: 5%;
-  font-size: 25px;
 }
 
 .central_left_mail {
@@ -55,7 +55,7 @@
 
 .footer_rigth_text {
   width: 300px;
-  margin-bottom: 1%;
+  margin-bottom: 5%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 400;
@@ -69,7 +69,7 @@
 }
 
 .central_left_text_last {
-  margin: 12% 0 0%;
+  margin: 10% 0 0%;
 }
 
 .footer_rigth_container {
@@ -78,16 +78,16 @@
 }
 
 .input {
-  margin: 1% 0% 1%;
+  margin: 4% 0% 4%;
   display: flex;
   width: 390px;
-  height: 31px;
-  border-radius: 10px;
+  height: 50px;
+  border-radius: 20px;
   background-color: #e8e8e8;
   color: #bfbfbf;
-  text-indent: 3%;
+  text-indent: 5%;
   font-family: 'General Sans';
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 500;
   line-height: 15px;
   letter-spacing: -0.011em;
@@ -98,7 +98,7 @@
 }
 
 .footer_last_block {
-  display: flex;
+  display: block;
   width: 92%;
   padding: 0% 3% 0%;
   margin-top: 3%;
@@ -118,11 +118,12 @@
 }
 
 .row_checkbox {
-  display: flex;
+  display: block;
 }
 
 .checkbox_description {
-  top: 15px;
+  top: 0%;
+  left: 3%;
   padding-top: 0px;
   margin-left: 10px;
   font-family: 'Neue Montreal';
@@ -136,19 +137,19 @@
 
 .last_block_col_one {
   position: relative;
-  width: 300px;
+  width: auto;
   left: 2%;
 }
 
 .last_block_col_two {
   position: relative;
-  width: 800px;
+  width: auto;
 }
 
 .last_block_col_three {
   position: relative;
-  width: 300px;
-  left: 15%;
+  width: auto;
+  left: 16%;
 }
 
 .button_submit {
@@ -156,9 +157,8 @@
   width: 160px;
   height: 50px;
   padding: 10px 50px 10px 50px;
-  margin: 0% 0% 0%;
-  margin-left: 15px;
-  border-radius: 13px;
+  margin: 15% 0% 0%;
+  border-radius: 20px;
   background-color: #0b0b0b66;
   font-size: 18.8px;
 }
@@ -171,7 +171,9 @@
 }
 
 .button_menu {
-  position: relative;
+  position: absolute;
+  left: 40%;
+  bottom: 305px;
   width: 120px;
   height: 50px;
   padding: 10px 30px 10px 30px;
@@ -208,7 +210,8 @@
 }
 
 .footer_logo {
-  transform: scale(0.8);
+  padding: 10% 20% 10%;
+  transform: scale(1);
 }
 
 .logo_last {
