--- a/src/components/header/header480.css
+++ b/src/components/header/header480.css
@@ -1,3 +1,19 @@
-header {
-  color:red;
+.header {
+  width: 480px;
+  padding: 3% 7% 3%;
+}
+
+.header_row {
+  display: flex;
+  justify-content: space-between;
+}
+
+img {
+  display: block;
+  float: left;
+}
+
+.header_logo {
+  position: relative;
+  transform: scale(0.7);
 }
