--- a/src/components/sixBlock/six1920.css
+++ b/src/components/sixBlock/six1920.css
@@ -4,38 +4,36 @@
   padding: 0 5% 0;
 }
 
-    .six_row {
-      padding: 5% 1% 5%;
-      color: #FFFFFF;
-    }
-    
-    .six_title {
-      width: 12.48%;
-      height: 5.36%;
-      margin-right: 30%;
-      font-family: 'Neue Montreal';
-      font-size: 45px;
-      font-weight: 500;
-      line-height: 50px;
-      letter-spacing: -0.011em;
-      text-align: left;
-    }
-    
-    .six_description {
-      font-family: 'Neue Montreal';
-      font-size: 25px;
-      font-weight: 400;
-      line-height: 31px;
-      letter-spacing: -0.011em;
-      text-align: left;
-    }
-    
-    .six_description_text {
-      color: #FFFFFF;
-      margin-bottom: 5%;
-      justify-content: space-between;
-      text-align: left;
-    }
-    
-    
-    
+.six_row {
+  display: flex;
+  padding: 5% 1% 5%;
+  color: #ffffff;
+}
+
+.six_title {
+  width: 12.48%;
+  height: 5.36%;
+  margin-right: 30%;
+  font-family: 'Neue Montreal';
+  font-size: 45px;
+  font-weight: 500;
+  line-height: 50px;
+  letter-spacing: -0.011em;
+  text-align: left;
+}
+
+.six_description {
+  font-family: 'Neue Montreal';
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 31px;
+  letter-spacing: -0.011em;
+  text-align: left;
+}
+
+.six_description_text {
+  color: #ffffff;
+  margin-bottom: 5%;
+  justify-content: space-between;
+  text-align: left;
+}
