--- a/src/components/sixBlock/six480.css
+++ b/src/components/sixBlock/six480.css
@@ -1,19 +1,20 @@
-.eight {
+.six {
   position: relative;
-  width: 768px;
+  width: 480px;
   padding: 0 5% 0;
 }
 
-.eight_row {
-  display: flex;
+.six_row {
+  display: block;
   padding: 5% 1% 5%;
   color: #ffffff;
 }
 
-.eight_title {
-  width: 12.48%;
-  height: 5.36%;
-  margin-right: 35%;
+.six_title {
+  width: auto;
+  height: auto;
+  padding: 2% 3% 1%;
+  margin-right: 0%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
@@ -22,8 +23,9 @@
   text-align: left;
 }
 
-.eight_description {
+.six_description {
   font-family: 'Neue Montreal';
+  padding: 2% 3% 1%;
   font-size: 18px;
   font-weight: 400;
   line-height: 25px;
@@ -31,7 +33,7 @@
   text-align: left;
 }
 
-.eight_description_text {
+.six_description_text {
   color: #ffffff;
   margin-bottom: 5%;
   justify-content: space-between;
