--- a/src/components/tenBlock/ten.css
+++ b/src/components/tenBlock/ten.css
@@ -1,4 +1,5 @@
 @import url('./ten320.css') (min-width: 320px);
+@import url('./ten480.css') (min-width: 480px);
 @import url('./ten768.css') (min-width: 768px);
 @import url('./ten992.css') (min-width: 992px);
 @import url('./ten1200.css') (min-width: 1200px);
