--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -1,5 +1,5 @@
 @import url('./title320.css') (min-width: 320px);
-/* @import url('./title480.css') (min-width: 480px); */
+@import url('./title480.css') (min-width: 480px);
 @import url('./title768.css') (min-width: 768px);
 @import url('./title992.css') (min-width: 992px);
 @import url('./title1200.css') (min-width: 1200px);
