--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,5 @@
 @import url('./header320.css') (min-width: 320px);
+@import url('./header390.css') (min-width: 390px);
 @import url('./header480.css') (min-width: 480px);
 @import url('./header768.css') (min-width: 768px);
 @import url('./header992.css') (min-width: 992px);
