--- a/src/components/image/image.css
+++ b/src/components/image/image.css
@@ -1,2 +1,3 @@
 @import url('./image320.css') (min-width: 320px);
+@import url('./image390.css') (min-width: 390px);
 @import url('./image1920.css') (min-width: 1920px);
