--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -1,4 +1,5 @@
 @import url('./title320.css') (min-width: 320px);
+@import url('./title390.css') (min-width: 390px);
 @import url('./title480.css') (min-width: 480px);
 @import url('./title768.css') (min-width: 768px);
 @import url('./title992.css') (min-width: 992px);
