--- a/src/components/eightBlock/eight390.css
+++ b/src/components/eightBlock/eight390.css
@@ -1,32 +1,34 @@
 .eight {
   position: relative;
-  width: 1200px;
-  padding: 0 5% 0;
+  width: 390px;
+  padding: 15% 7% 10%;
 }
 
 .eight_row {
-  display: flex;
+  display: block;
   padding: 5% 1% 5%;
   color: #ffffff;
 }
 
 .eight_title {
-  width: 40%;
-  height: 5.36%;
-  margin-right: 10%;
+  width: auto;
+  height: auto;
+  padding: 2% 3% 10%;
+  margin-right: 0;
   font-family: 'Neue Montreal';
-  font-size: 35px;
+  font-size: 30px;
   font-weight: 500;
-  line-height: 50px;
+  line-height: 40px;
   letter-spacing: -0.011em;
   text-align: left;
 }
 
 .eight_description {
+  padding: 2% 3% 1%;
   font-family: 'Neue Montreal';
   font-size: 18px;
   font-weight: 400;
-  line-height: 31px;
+  line-height: 25px;
   letter-spacing: -0.011em;
   text-align: left;
 }
