--- a/src/components/fourBlock/four.css
+++ b/src/components/fourBlock/four.css
@@ -1,4 +1,5 @@
 @import url('./four320.css') (min-width: 320px);
+@import url('./four390.css') (min-width: 390px);
 @import url('./four480.css') (min-width: 480px);
 @import url('./four768.css') (min-width: 768px);
 @import url('./four992.css') (min-width: 992px);
