--- a/src/components/fourBlock/four390.css
+++ b/src/components/fourBlock/four390.css
@@ -1,41 +1,43 @@
 .four {
   position: relative;
-  width: 1440px;
-  padding: 0 5% 0;
+  width: 390px;
+  padding: 15% 7% 10%;
 }
 
 .four_row {
   padding: 5% 1% 5%;
-  display: flex;
+  display: block;
   color: #ffffff;
 }
 
 .four_title {
   display: flex;
   justify-content: space-between;
-  width: 850px;
-  /* padding: 0% 0% 0%; */
-  /* height: 5.36%; */
-  margin-right: 17%;
+  width: auto;
+  height: auto;
+  padding: 2% 3% 1%;
+  margin: 7% 0% 5%;
   font-family: 'Neue Montreal';
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 500;
-  line-height: 50px;
+  line-height: 40px;
   letter-spacing: -0.011em;
   text-align: left;
 }
 
 .four_description {
+  padding: 2% 3% 1%;
   font-family: 'Neue Montreal';
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
-  line-height: 31px;
+  line-height: 25px;
   letter-spacing: -0.011em;
   text-align: left;
 }
 
 .four_description_text {
   position: relative;
+  margin: 10% 0% 10%;
   color: #ffffff;
   display: flex;
   margin-bottom: 5%;
