--- a/src/components/fourBlock/four480.css
+++ b/src/components/fourBlock/four480.css
@@ -16,7 +16,7 @@
   width: auto;
   height: auto;
   padding: 2% 3% 1%;
-  margin-right: 0%;
+  margin: 0% 0% 0%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
