--- a/src/components/sixBlock/six.css
+++ b/src/components/sixBlock/six.css
@@ -1,4 +1,5 @@
 @import url('./six320.css') (min-width: 320px);
+@import url('./six390.css') (min-width: 390px);
 @import url('./six480.css') (min-width: 480px);
 @import url('./six768.css') (min-width: 768px);
 @import url('./six992.css') (min-width: 992px);
