--- a/src/components/sixBlock/six1200.css
+++ b/src/components/sixBlock/six1200.css
@@ -11,9 +11,9 @@
 }
 
 .six_title {
-  width: 12.48%;
+  width: 30%;
   height: 5.36%;
-  margin-right: 30%;
+  margin-right: 18%;
   font-family: 'Neue Montreal';
   font-size: 35px;
   font-weight: 500;
@@ -23,6 +23,7 @@
 }
 
 .six_description {
+  padding: 3% 2% 1%;
   font-family: 'Neue Montreal';
   font-size: 18px;
   font-weight: 400;
