--- a/src/components/sixBlock/six390.css
+++ b/src/components/sixBlock/six390.css
@@ -1,21 +1,21 @@
-.four {
+.six {
   position: relative;
-  width: 768px;
-  padding: 0 3% 0;
+  width: 390px;
+  padding: 0 5% 0;
 }
 
-.four_row {
+.six_row {
+  display: block;
   padding: 5% 1% 5%;
-  display: flex;
   color: #ffffff;
 }
 
-.four_title {
-  display: flex;
-  justify-content: space-between;
-  width: 11.48%;
-  height: 5.36%;
-  margin-right: 25%;
+.six_title {
+  width: auto;
+  height: auto;
+  padding: 2% 3% 1%;
+  margin: 7% 0% 0%;
+  margin-right: 0%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
@@ -24,9 +24,9 @@
   text-align: left;
 }
 
-.four_description {
-  padding: 0% 3% 1%;
+.six_description {
   font-family: 'Neue Montreal';
+  padding: 2% 3% 1%;
   font-size: 18px;
   font-weight: 400;
   line-height: 25px;
@@ -34,11 +34,17 @@
   text-align: left;
 }
 
-.four_description_text {
-  position: relative;
+.six_description_text {
   color: #ffffff;
-  display: flex;
-  margin: 5% 0% 10%;
+  margin: 10% 0% 10%;
   justify-content: space-between;
   text-align: left;
+}
+
+.six_description_signature {
+  color: #ffffff;
+  margin: 10% 0% 10%;
+  justify-content: space-between;
+  text-align: left;
+  font-style: italic;
 }
