--- a/src/components/tenBlock/ten1920.css
+++ b/src/components/tenBlock/ten1920.css
@@ -1,7 +1,7 @@
 .ten {
   position: relative;
   width: 1920px;
-  padding: 0 5% 0;
+  padding: 5% 5% 5%;
 }
 
 .ten_row {
@@ -11,7 +11,7 @@
 
 .ten_title {
   height: 5.36%;
-  margin-right: 35%;
+  margin-right: 15%;
   font-family: 'Neue Montreal';
   font-size: 45px;
   font-weight: 500;
