--- a/src/components/tenBlock/ten390.css
+++ b/src/components/tenBlock/ten390.css
@@ -1,31 +1,34 @@
 .ten {
   position: relative;
-  width: 1440px;
-  padding: 7% 5% 10%;
+  width: 390px;
+  padding: 0 5% 0;
 }
 
 .ten_row {
-  display: flex;
-  padding: 5% 1% 5%;
+  display: block;
+  padding: 5% 1% 25%;
 }
 
 .ten_title {
-  height: 5.36%;
-  margin-right: 10%;
+  width: 50%;
+  height: auto;
+  padding: 2% 3% 1%;
+  margin: 5% 0% 5%;
   font-family: 'Neue Montreal';
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 500;
-  line-height: 50px;
+  line-height: 40px;
   letter-spacing: -0.011em;
   text-align: left;
 }
 
 .ten_description {
-  font-family: 'Neue Montreal';
   width: auto;
-  font-size: 20px;
+  padding: 2% 3% 1%;
+  font-family: 'Neue Montreal';
+  font-size: 18px;
   font-weight: 400;
-  line-height: 31px;
+  line-height: 25px;
   letter-spacing: -0.011em;
   text-align: left;
 }
@@ -33,7 +36,7 @@
 .ten_text {
   margin-right: 15%;
   font-family: 'Neue Montreal';
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 31px;
   letter-spacing: -0.011em;
@@ -44,10 +47,9 @@
   display: flex;
   width: 265px;
   height: auto;
-  margin: 0% 0% 7%;
 }
 
 .pict {
   position: relative;
-  transform: scale(0.8);
+  transform: scale(0.6);
 }
