--- a/src/components/tenBlock/ten768.css
+++ b/src/components/tenBlock/ten768.css
@@ -10,7 +10,10 @@
 }
 
 .ten_title {
+  width: 50%;
   height: 5.36%;
+  padding: 0% 5% 0%;
+  margin: 0% 0% 0%;
   margin-right: 0%;
   font-family: 'Neue Montreal';
   font-size: 30px;
