--- a/src/components/title/title390.css
+++ b/src/components/title/title390.css
@@ -1,7 +1,7 @@
 .title {
   position: relative;
   width: 390px;
-  padding: 0 3% 0;
+  padding: 0% 7% 0%;
 }
 
 .title_row {
@@ -16,6 +16,7 @@
   order: 2;
   width: 100%;
   padding-left: 3%;
+  margin-bottom: 3%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
@@ -47,9 +48,9 @@
 .title_filter {
   order: 1;
   position: static;
-  padding: 0% 0% 5%;
+  padding: 2% 0% 5%;
   margin-left: 0%;
-  margin-right: 55%;
+  margin-right: 50%;
 }
 
 .title_line {
