--- a/src/components/title/title768.css
+++ b/src/components/title/title768.css
@@ -14,6 +14,7 @@
 .title_text {
   width: 75%;
   padding-left: 3%;
+  margin-bottom: 1%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
@@ -32,7 +33,7 @@
 
 .button span {
   position: relative;
-  left: 8%;
+  left: 4%;
   font-family: 'Neue Montreal';
   font-size: 12px;
   font-weight: 500;
