--- a/src/components/image/image320.css
+++ b/src/components/image/image320.css
@@ -1,3 +1,31 @@
-.image {
-  padding: 15px 0 15px;
+.imageFirst {
+  background-size: contain;
+  background-repeat: no-repeat;
+  aspect-ratio: 320 / 512;
+  margin: 3% 0% 0%;
+  background-image: url('./../../img/image390.png');
+}
+
+.imageSecond {
+  background-size: contain;
+  background-repeat: no-repeat;
+  aspect-ratio: 320 / 512;
+  margin: 7% 0% 0%;
+  background-image: url('./../../img/secondImage390.png');
+}
+
+.imageThird {
+  background-size: contain;
+  background-repeat: no-repeat;
+  aspect-ratio: 423 / 237;
+  margin: 7% 0% 0%;
+  background-image: url('./../../img/thirdImage.png');
+}
+
+.imageFourth {
+  background-size: contain;
+  background-repeat: no-repeat;
+  aspect-ratio: 320 / 512;
+  margin: 7% 0% 0%;
+  background-image: url('./../../img/fourthImage390.png');
 }
