--- a/src/components/image/image1920.css
+++ b/src/components/image/image1920.css
@@ -1,3 +1,37 @@
-.image {
-padding: 2% 0 2%;
+.imageFirst {
+  width: auto;
+  height: auto;
+  background-size: contain;
+  background-repeat: no-repeat;
+  aspect-ratio: 1920 / 1152;
+  margin: 3% 0% 0%;
+  background-image: url('./../../img/MainImg.png');
+}
+
+.imageSecond {
+  width: auto;
+  height: auto;
+  background-size: contain;
+  background-repeat: no-repeat;
+  aspect-ratio: 1920 / 1152;
+  margin: 3% 0% 0%;
+  background-image: url('./../../img/secondImage.png');
+}
+
+.imageThird {
+  background-size: contain;
+  background-repeat: no-repeat;
+  aspect-ratio: 1920 / 1152;
+  margin: 3% 0% 0%;
+  background-image: url('./../../img/thirdImage.png');
+}
+
+.imageFourth {
+  width: auto;
+  height: auto;
+  background-size: contain;
+  background-repeat: no-repeat;
+  aspect-ratio: 1920 / 1152;
+  margin: 3% 0% 0%;
+  background-image: url('./../../img/fourthImage.png');
 }
