--- a/src/components/tenBlock/ten320.css
+++ b/src/components/tenBlock/ten320.css
@@ -1,49 +1,57 @@
-.ten_title {
-  display: flex;
-  justify-content: space-between;
+.ten {
+  position: relative;
+  width: 390px;
+  padding: 0 5% 0;
 }
 
 .ten_row {
-  display: flex;
-  color: #FFFFFF;
-  font-size: 8px;
-  padding: 15px;
-  padding-left: 40px;
-  padding-right: 0px;
+  display: block;
+  padding: 5% 1% 25%;
+  color: #ffffff;
 }
 
 .ten_title {
-  padding: 10px 20px 0px 16px;
+  width: 50%;
+  height: auto;
+  padding: 2% 3% 1%;
+  margin: 5% 0% 5%;
+  font-family: 'Neue Montreal';
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 40px;
+  letter-spacing: -0.011em;
   text-align: left;
 }
 
 .ten_description {
-  font-size: 4px;
-  padding: 5px 20px 20px 50px;
-}
-
-p {
-  position: relative;
-  color: #FFFFFF;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
+  width: auto;
+  padding: 2% 3% 1%;
+  font-family: 'Neue Montreal';
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: -0.011em;
+  text-align: left;
 }
 
 .ten_text {
-  font-size: 5px;
-  margin: 2px;
+  margin-right: 15%;
+  font-family: 'Neue Montreal';
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 31px;
+  letter-spacing: -0.011em;
   text-align: left;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .pointer {
   display: flex;
-  width: 55px;
-  height: 10px;
+  width: 265px;
+  height: auto;
 }
 
 .pict {
   position: relative;
-  transform: scale(0.4);
+  transform: scale(0.6);
 }
