--- a/src/components/title/title320.css
+++ b/src/components/title/title320.css
@@ -1,20 +1,44 @@
+.title {
+  position: relative;
+  width: 320px;
+  padding: 0% 7% 0%;
+}
+
 .title_row {
+  flex-direction: column;
   display: flex;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 8px;
-  padding-left: 40px;
+}
+
+.title_text {
+  order: 2;
+  width: 100%;
+  padding-left: 0%;
+  margin-bottom: 0%;
+  font-family: 'Neue Montreal';
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: -0.011em;
+  text-align: left;
+}
+
+.title_filter {
+  order: 1;
+  padding: 2% 70% 0% 0%;
 }
 
 .button {
-  height: 5px;
-  width: 25px;
+  height: 13px;
+  width: 35px;
   padding-left: 5px;
   margin-left: 2px;
   margin-bottom: 3px;
   font-family: 'Comfortaa';
   font-size: 10px;
   color: #ffffff !important;
-  border-radius: 5px;
+  border-radius: 7px;
   border: 1px solid #ffffff;
   background: var(--back);
   background: linear-gradient(to top, var(--back));
@@ -22,16 +46,10 @@
 
 .button span {
   position: relative;
-  color: #FFFFFF;
+  color: #ffffff;
   display: flex;
   justify-content: space-between;
-  font-size: 4px;
-}
-
-
-
-.title_filter {
-  margin-left: 50px;
+  font-size: 6px;
 }
 
 .title_line {
@@ -39,15 +57,5 @@
   width: 80%;
   height: 0.5px;
   border-radius: 1px;
-  margin-left: 40px;
-  background: #FFFFFF;
+  background: #ffffff;
 }
-
-
-/* .line {
-  width: 80%;
-  height: 0.5px;
-  border-radius: 1px;
-  margin-left: 40px;
-  background: #FFFFFF;
-} */
