--- a/src/components/eightBlock/eight320.css
+++ b/src/components/eightBlock/eight320.css
@@ -1,33 +1,41 @@
-.eight_title {
-  display: flex;
-  justify-content: space-between;
+.eight {
+  position: relative;
+  width: 320px;
+  padding: 15% 7% 10%;
 }
 
 .eight_row {
-  display: flex;
-  color: #FFFFFF;
-  font-size: 8px;
-  padding-top: 15px;
-  padding-left: 40px;
+  display: block;
+  padding: 5% 1% 5%;
+  color: #ffffff;
 }
 
 .eight_title {
-  padding: 10px 20px 0px 16px;
+  width: auto;
+  height: auto;
+  padding: 2% 3% 10%;
+  margin-right: 0;
+  font-family: 'Neue Montreal';
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 40px;
+  letter-spacing: -0.011em;
   text-align: left;
 }
 
 .eight_description {
-  font-size: 4px;
-  padding: 10px 20px 0 0;
+  padding: 2% 3% 1%;
+  font-family: 'Neue Montreal';
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: -0.011em;
+  text-align: left;
 }
 
 .eight_description_text {
-  position: relative;
-  display: flex;
-  text-align: left;
-  color: #FFFFFF;
+  color: #ffffff;
+  margin-bottom: 5%;
   justify-content: space-between;
-  margin-bottom: 10px;
+  text-align: left;
 }
-
-
