--- a/src/components/title/title992.css
+++ b/src/components/title/title992.css
@@ -12,7 +12,7 @@
 }
 
 .title_text {
-  padding-left: 4%;
+  padding: 3% 4% 0%;
   font-family: 'Neue Montreal';
   font-size: 35px;
   font-weight: 500;
