--- a/src/components/tenBlock/ten768.css
+++ b/src/components/tenBlock/ten768.css
@@ -5,16 +5,17 @@
 }
 
 .ten_row {
+  width: auto;
   display: flex;
   padding: 5% 1% 5%;
 }
 
 .ten_title {
-  width: 50%;
+  width: 100%;
   height: 5.36%;
   padding: 0% 5% 0%;
   margin: 0% 0% 0%;
-  margin-right: 0%;
+  margin-right: 15%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
