--- a/src/components/title/title768.css
+++ b/src/components/title/title768.css
@@ -1,7 +1,7 @@
 .title {
   position: relative;
   width: 768px;
-  padding: 0 3% 0;
+  padding: 3% 3% 3%;
 }
 
 .title_row {
@@ -14,7 +14,7 @@
 .title_text {
   width: 75%;
   padding-left: 3%;
-  margin-bottom: 1%;
+  margin-bottom: 0%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
