--- a/src/components/eightBlock/eight768.css
+++ b/src/components/eightBlock/eight768.css
@@ -11,22 +11,23 @@
 }
 
 .eight_title {
-  width: 12.48%;
+  width: 50%;
   height: 5.36%;
-  margin-right: 35%;
+  margin-right: 8%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
-  line-height: 40px;
+  line-height: 33px;
   letter-spacing: -0.011em;
   text-align: left;
 }
 
 .eight_description {
+  padding: 2% 3% 1%;
   font-family: 'Neue Montreal';
   font-size: 18px;
   font-weight: 400;
-  line-height: 25px;
+  line-height: 19.8px;
   letter-spacing: -0.011em;
   text-align: left;
 }
