--- a/src/components/fourBlock/four320.css
+++ b/src/components/fourBlock/four320.css
@@ -7,17 +7,16 @@
 .four_row {
   display: flex;
   color: #ffffff;
-  font-size: 8px;
   flex-direction: column;
 }
 
 .four_title {
   display: flex;
   justify-content: space-between;
-  width: auto;
+  width: 50%;
   height: auto;
   padding: 2% 3% 1%;
-  margin: 7% 0% 5%;
+  margin: 5% 0% 5%;
   font-family: 'Neue Montreal';
   font-size: 20px;
   font-weight: 500;
@@ -31,7 +30,7 @@
   font-family: 'Neue Montreal';
   font-size: 18px;
   font-weight: 400;
-  line-height: 25px;
+  line-height: 19.8px;
   letter-spacing: -0.011em;
   text-align: left;
 }
