--- a/src/components/sixBlock/six390.css
+++ b/src/components/sixBlock/six390.css
@@ -11,7 +11,7 @@
 }
 
 .six_title {
-  width: auto;
+  width: 50%;
   height: auto;
   padding: 2% 3% 1%;
   margin: 7% 0% 0%;
@@ -19,7 +19,7 @@
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
-  line-height: 40px;
+  line-height: 33px;
   letter-spacing: -0.011em;
   text-align: left;
 }
@@ -29,7 +29,7 @@
   padding: 2% 3% 7%;
   font-size: 18px;
   font-weight: 400;
-  line-height: 25px;
+  line-height: 19.8px;
   letter-spacing: -0.011em;
   text-align: left;
 }
