--- a/src/components/sixBlock/six992.css
+++ b/src/components/sixBlock/six992.css
@@ -11,13 +11,14 @@
 }
 
 .six_title {
-  width: 12.48%;
-  height: 5.36%;
-  margin-right: 25%;
+  width: 40%;
+  height: 10%;
+  padding: 0% 3% 0% 3%;
+  margin-right: 8%;
   font-family: 'Neue Montreal';
   font-size: 35px;
   font-weight: 500;
-  line-height: 50px;
+  line-height: 35px;
   letter-spacing: -0.011em;
   text-align: left;
 }
@@ -26,7 +27,7 @@
   font-family: 'Neue Montreal';
   font-size: 18px;
   font-weight: 400;
-  line-height: 31px;
+  line-height: 20px;
   letter-spacing: -0.011em;
   text-align: left;
 }
