--- a/src/components/tenBlock/ten390.css
+++ b/src/components/tenBlock/ten390.css
@@ -10,14 +10,14 @@
 }
 
 .ten_title {
-  width: 50%;
+  width: auto;
   height: auto;
   padding: 2% 3% 1%;
   margin: 5% 0% 5%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
-  line-height: 40px;
+  line-height: 33px;
   letter-spacing: -0.011em;
   text-align: left;
 }
@@ -38,7 +38,7 @@
   font-family: 'Neue Montreal';
   font-size: 20px;
   font-weight: 400;
-  line-height: 31px;
+  line-height: 33px;
   letter-spacing: -0.011em;
   text-align: left;
 }
