--- a/src/components/title/title320.css
+++ b/src/components/title/title320.css
@@ -8,7 +8,6 @@
   flex-direction: column;
   display: flex;
   color: #ffffff;
-  font-size: 8px;
 }
 
 .title_text {
@@ -26,12 +25,12 @@
 
 .title_filter {
   order: 1;
-  padding: 4% 60% 2% 0%;
+  padding: 4% 54% 2% 0%;
 }
 
 .button {
   height: 15px;
-  width: 52px;
+  width: 60px;
   padding-left: 5px;
   margin-left: 2px;
   margin-bottom: 3px;
@@ -40,21 +39,24 @@
   color: #ffffff !important;
   border-radius: 7px;
   border: 1px solid #ffffff;
-  background: var(--back);
   background: linear-gradient(to top, var(--back));
 }
 
-.button span {
+.button_one {
   position: relative;
-  color: #ffffff;
   display: flex;
-  justify-content: space-between;
-  font-size: 10px;
+  left: 12%;
+}
+
+.button_two {
+  position: relative;
+  display: flex;
+  left: 5%;
 }
 
 .title_line {
   bottom: 20px;
-  width: 80%;
+  width: 92%;
   height: 0.5px;
   border-radius: 1px;
   background: #ffffff;
