--- a/src/components/title/title480.css
+++ b/src/components/title/title480.css
@@ -8,18 +8,17 @@
   display: flex;
   flex-direction: row;
   color: #ffffff;
-  font-size: 8px;
   padding: 0%;
 }
 
 .title_text {
   order: 0;
-  width: 75%;
-  padding-left: 3%;
+  width: 70%;
+  padding: 3%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
-  line-height: 40px;
+  line-height: 33px;
   letter-spacing: -0.011em;
   text-align: left;
 }
@@ -30,10 +29,6 @@
   height: 22px;
   border-radius: 80px;
   top: 39%;
-}
-
-.button span {
-  position: relative;
   left: 8%;
   font-family: 'Neue Montreal';
   font-size: 12px;
@@ -43,10 +38,22 @@
   text-align: left;
 }
 
+.button_one {
+  position: relative;
+  display: flex;
+  left: 17%;
+}
+
+.button_two {
+  position: relative;
+  display: flex;
+  left: 8%;
+}
+
 .title_filter {
   order: 1;
   position: static;
-  padding: 0% 0% 6%;
+  padding: 0% 0% 9%;
   margin-right: 0%;
   margin-left: 0%;
 }
