--- a/src/components/title/title768.css
+++ b/src/components/title/title768.css
@@ -13,12 +13,12 @@
 
 .title_text {
   width: 75%;
-  padding-left: 3%;
+  padding: 0% 0% 2% 3%;
   margin-bottom: 0%;
   font-family: 'Neue Montreal';
   font-size: 30px;
   font-weight: 500;
-  line-height: 40px;
+  line-height: 33px;
   letter-spacing: -0.011em;
   text-align: left;
 }
@@ -27,19 +27,26 @@
   position: relative;
   width: 70px;
   height: 22px;
-  border-radius: 80px;
+  left: 0%;
   top: 39%;
-}
-
-.button span {
-  position: relative;
-  left: 4%;
+  border-radius: 80px;
   font-family: 'Neue Montreal';
   font-size: 12px;
   font-weight: 500;
   line-height: 14px;
   letter-spacing: -0.011em;
-  text-align: left;
+}
+
+.button_one {
+  position: relative;
+  display: flex;
+  left: 10%;
+}
+
+.button_two {
+  position: relative;
+  display: flex;
+  left: 0%;
 }
 
 .title_filter {
