--- a/src/components/tenBlock/ten1200.css
+++ b/src/components/tenBlock/ten1200.css
@@ -11,11 +11,12 @@
 
 .ten_title {
   height: 5.36%;
-  margin-right: 25%;
+  width: 60%;
+  margin-right: 0%;
   font-family: 'Neue Montreal';
   font-size: 35px;
   font-weight: 500;
-  line-height: 50px;
+  line-height: 35px;
   letter-spacing: -0.011em;
   text-align: left;
 }
