--- a/src/components/title/title1200.css
+++ b/src/components/title/title1200.css
@@ -5,11 +5,11 @@
 }
 
 .title_text {
-  width: 73%;
+  width: 71%;
   font-family: 'Neue Montreal';
   font-size: 35px;
   font-weight: 500;
-  line-height: 68px;
+  line-height: 40px;
   letter-spacing: -0.011em;
   text-align: left;
 }
@@ -19,18 +19,25 @@
   width: 119px;
   height: 32px;
   border-radius: 80px;
-  top: 50%;
-}
-
-.button span {
-  position: relative;
-  left: 16%;
+  top: 45%;
+  left: 10%;
   font-family: 'Neue Montreal';
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 27px;
   letter-spacing: -0.011em;
-  text-align: left;
+}
+
+.button_one {
+  position: relative;
+  display: flex;
+  left: 20%;
+}
+
+.button_two {
+  position: relative;
+  display: flex;
+  left: 13%;
 }
 
 .title_filter {
