--- a/src/components/title/title1440.css
+++ b/src/components/title/title1440.css
@@ -5,32 +5,33 @@
 }
 
 .title_text {
+  width: 73%;
   padding-left: 3%;
   font-family: 'Neue Montreal';
   font-size: 40px;
   font-weight: 500;
-  line-height: 68px;
+  line-height: 34px;
   letter-spacing: -0.011em;
   text-align: left;
 }
 
 .button {
   position: relative;
-  width: 119px;
-  height: 32px;
+  width: 111px;
+  height: 29px;
   border-radius: 80px;
-  top: 55%;
+  top: 50%;
+  font-family: 'Neue Montreal';
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: -0.011em;
 }
 
-.button span {
+.button_two {
   position: relative;
-  left: 16%;
-  font-family: 'Neue Montreal';
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 27px;
-  letter-spacing: -0.011em;
-  text-align: left;
+  display: flex;
+  left: 10%;
 }
 
 .title_filter {
