--- a/src/components/eightBlock/eight1920.css
+++ b/src/components/eightBlock/eight1920.css
@@ -11,9 +11,10 @@
 }
 
 .eight_title {
-  width: 12.48%;
+  width: 35%;
   height: 5.36%;
-  margin-right: 30%;
+  padding: 2% 2% 0% 3%;
+  margin-right: 21%;
   font-family: 'Neue Montreal';
   font-size: 45px;
   font-weight: 500;
