--- a/src/components/tenBlock/ten1920.css
+++ b/src/components/tenBlock/ten1920.css
@@ -10,6 +10,7 @@
 }
 
 .ten_title {
+  width: 70%;
   height: 5.36%;
   margin-right: 0%;
   font-family: 'Neue Montreal';
@@ -33,16 +34,16 @@
 .ten_text {
   margin-right: 15%;
   font-family: 'Neue Montreal';
-  font-size: 25px;
+  font-size: 30px;
   font-weight: 400;
-  line-height: 31px;
+  line-height: 33px;
   letter-spacing: -0.011em;
   text-align: left;
 }
 
 .pointer {
   display: flex;
-  width: 265px;
+  width: 400px;
   height: auto;
 }
 
